--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-loader": "^7.3.3",
     "sass": "^1.69.4",
     "style-loader": "^3.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
